# drover

./: .gitignore  Dockerfile  README.md  file.db  manage.py  pyproject.toml  requirements.txt  terms_privacy.md
drover/: settings.py  urls.py  wsgi.py
groups/: admin.py  emails.py  models.py  sms.py  urls.py  views.py
groups/migrations/: 0001_initial.py  0001_squashed_0022_alter_groupevent_options_and_more.py  0002_auto_20191213_0829.py  0003_auto_20191218_1122.py  0004_auto_20191222_1104.py  0005_auto_20191222_1237.py  0006_groupmember_member_id.py  0007_populate_uuid_values_groupmember.py  0008_remove_uuid_null.py  0009_groupmember_is_deleted.py  0010_auto_20201016_1046.py  0011_auto_20201019_1243.py  0012_groupmessageimage.py  0013_groupmemberrsvp.py  0014_auto_20260323_1830.py  0015_alter_group_options_alter_groupmember_options_and_more.py  0016_auto_20260323_1943.py  0017_remove_group_temp_id_alter_group_created_at_and_more.py  0018_groupschedule_instructions_and_more.py  0019_alter_groupmessage_options_and_more.py  0020_remove_group_event_date.py  0021_groupevent_delete_groupschedule.py  0022_alter_groupevent_options_and_more.py  0023_groupmember_created_at_alter_group_created_at.py
groups/templates/: add_member.html  compose_message.html  conversation_details.html  create_group.html  edit_group.html  edit_member.html  event_form.html  event_form_modal.html  event_form_view.html  group_conversation.html  group_inbox.html  group_invite.html  (+5 more)
public/: urls.py  views.py
shortener/: models.py  urls.py  utils.py  views.py
users/: forms.py  models.py  views.py
(+20 files in other folders)
